js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
typeof
import
.
source
.
UNKNOWN
;
}
